# nebulae-rs

./: .gitignore  Cargo.toml  LICENSE.TXT  b.bat  b32.bat  ba.bat  build_aa64.py  build_iron.py  build_x64.py  build_x86.py  dev_journal.md  r.bat  r32.bat  ra.bat  readme.md
.cargo/: config.toml
baselib/: Cargo.toml
baselib/src/: bit.rs  bitmap.rs  common.rs  constants.rs  constants64.rs  cpu.rs  debug_assert.rs  fb_bitmap.rs  fibers.rs  frame_alloc.rs  framemgr.rs  genesis.rs  interrupts.rs  kalloc.rs  kernel_statics.rs  lib.rs  memory.rs  nebulae.rs  panic.rs  permissions.rs  status.rs  structures.rs  sync.rs  util.rs  vmem.rs
baselib/src/arch/a64/: asm.rs
baselib/src/arch/aa64/: async_exception.rs  serial.rs  vmem64.rs
baselib/src/arch/aarch64/: asm.rs  constants.rs  cpu.rs  exception.rs  exception_table.s  serial.rs  vmem64.rs
baselib/src/arch/x86/: asm.rs  cache_descriptor.rs  constants_x32.rs  constants_x64.rs  cpu.rs  interrupts.rs  random.rs  serial.rs  vmem32.rs  vmem64.rs
baselib/src/bringup/: mod.rs  uefi.rs
baselib/src/frame_alloc/: mod.rs
baselib/src/memory/: address.rs  mod.rs
baselib/src/rng/: isaac64.rs  mod.rs
baselib/src/structures/: bitmap.rs  mod.rs  tree.rs
iron/: Cargo.toml
iron/src/: main.rs
qemu_boot/: OVMF-need-smm.fd  OVMF-pure-efi.fd  OVMF-with-csm.fd  OVMF_CODE-need-smm.fd  OVMF_CODE-pure-efi.fd  OVMF_CODE-with-csm.fd  OVMF_VARS-need-smm.fd  OVMF_VARS-pure-efi.fd  UefiShell.iso  edk2-i386-vars.fd
