[package]
name = "baselib"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = "0.26"
uefi-macros = "0.13"
qemu-exit = "3.x.x"
bitfield-struct = "0.5.x"
volatile = "0.2.x"
spin = "0.9.x"

[dependencies.num-traits]
version = "0.2"
default-features = false

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
uart_16550 = "0.3.x"

[target.'cfg(target_arch = "x86")'.dependencies]
x86 = "0.52.x"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.x"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.x.x"
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"] }

[dependencies.lazy_static]
version = "1.4.x"
features = ["spin_no_std"]
